# bank

./: .gitignore  CMakeLists.txt  License.md  Readme.md
docs/: bank.md  hacking.md  porting.md
examples/: bank-example.cpp
include/bank/: allocator.hpp  bank.hpp  error.hpp  new.hpp  object.hpp  pointer.hpp
include/bank/detail/: array.hpp  callable.hpp  chunk.hpp  collector.hpp  manager.hpp  platform.hpp  pool.hpp  queue.hpp  ring.hpp  thread.hpp  tracker.hpp  types.hpp  utility.hpp
include/bank/detail/allocator/: base.hpp  queue.hpp  reserve.hpp
source/: bank.cpp  error.cpp  new.cpp  object.cpp
source/detail/: array.cpp  chunk.cpp  collector.cpp  freebsd.cpp  linux.cpp  macosx.cpp  manager.cpp  pool.cpp  queue.cpp  utility.cpp  win32.cpp
source/posix/: thread.cpp  utility.cpp
source/shared/: array.cpp  bank.cpp  chunk.cpp  collector.cpp  manager.cpp  object.cpp  pool.cpp  queue.cpp  thread.cpp  tracker.cpp  utility.cpp
source/win32/: thread.cpp  utility.cpp
